--- a/angular.json
+++ b/angular.json
@@ -14,6 +14,7 @@
           "builder": "@angular-devkit/build-angular:application",
           "options": {
             "outputPath": "dist/mi-portafolio",
+            "baseHref": "/mi-portafolio/",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -94,5 +95,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
